# geoconv

./: .gitignore  CITATION.cff  LICENSE  MoNet.py  README.md  ResNetBlock.py  gcnn.py  gcnn_test.py  inspect_data.py  mesh_data_set.py  mesh_processing.py  notes.txt  pyproject.toml  requirements.txt  setup.py  shot_computation.py  test_gcnn.py
GeodesicConvolution/preprocessing/: preprocess.py
GeodesicConvolution/train_examples/: train_MPI_FAUST.py
GeodesicPolarMap/: discrete_gpc.py  test_dgpc.py  utils.py
GeodesicPolarMap/c_extension/: c_extension.c  setup.py  test_c_extension.py
barycentric_coordinates/: barycentric_coords.py  test_barycentric_coordinates.py
c_extension/: c_extension.c  setup.py  test_c_extension.py
dataset/: TODO:tfds_new  preprocess_MPI_FAUST.py  tf_MPI_FAUST_dataset.py
dataset/MPI_FAUST/: preprocess.py  tf_dataset.py
datasets/MPI_FAUST/: tf_dataset.py
datasets/mpi_faust/: preprocess.py  tf_dataset.py
datasets/preprocessing/: barycentric_coords.py  discrete_gpc.py  preprocess.py
datasets/train_examples/: train_MPI_FAUST.py
examples/mpi_faust/: README.md  hypertuning.py
geoconv/: ResNetBlock.py  angular_max_pooling.py  geodesic_conv.py  resnet_block.py
geoconv/layers/: angular_avg_pooling.py  angular_max_pooling.py  conv_chi_squared.py  conv_dirac.py  conv_dirac_lite.py  conv_exp.py  conv_geodesic.py  conv_intrinsic.py  conv_intrinsic_lite.py  conv_student_t.py  conv_zero.py  geodesic_conv.py  resnet_block.py
geoconv/models/: intrinsic_model.py  resnet_block.py
geoconv/preprocessing/: barycentric_coordinates.py  barycentric_coords.py  discrete_gpc.py  geodesic_polar_coordinates.py  (+4 more)
geodesic_conv/: geodesic_conv.py
geodesic_polar_coordinates/: dgpc_test.py  discrete_gpc.py  test_dgpc.py  utils_dgpc.py
layers/: angular_max_pooling.py
misc/: barycentric_coordinates_test.py  c_extension_test.py  dgpc_test.py  dgpc_utils.py  gcnnMESH.py  gcnnMESH_test.py  gcnn_test.py  gcnn_vertex_wise.py  gcnn_vertex_wise_test.py  shot_computation.py  train_gcnn_test.py
pre_processing/: barycentric_coordinates.py  test_barycentric_coordinates.py
preprocessing/: barycentric_coords.py  preprocess.py
train_examples/: train_MPI_FAUST.py  train_mpi_faust.py
(+324 files in other folders)
